# trading-bot

./: .gitignore  README.md  pyproject.toml
notebooks/: data_downloader.ipynb
