[tool.poetry]
name = "trading bot"
version = "0.1.0"
description = "Automated trading bot with signals from machine learning"
authors = ["Lian Zhen Yang"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.33"
python-dotenv = "^1.0.0"
pandas = "^2.1.4"
numpy = "^1.26.2"
jupyter = "^1.0.0"
ipykernel = "^6.27.1"
ta = "^0.11.0"
matplotlib = "^3.8.2"
plotly = "^5.18.0"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
